<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.gykj.rollcall.ui.loss.LossDetailViewModel"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:binding="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_ffffff">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/color_5298fc">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:scaleType="fitXY"
                android:src="@mipmap/icon_back"
                binding:onClickCommand="@{viewModel.cancleOnClickCommand}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:text="@string/title_scan_detail"
                android:textColor="@color/color_ffffff"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                binding:onClickCommand="@{viewModel.cancleOnClickCommand}"/>


        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/color_f4f4f4">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                binding:placeholderRes="@mipmap/icon_default_user"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="90dp"
                android:textColor="@color/color_333333"
                android:textSize="14sp"
                android:text="@{viewModel.entity.userName}"/>



        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp">


            <TextView
                style="@style/lay_loss_text_style"
                android:text="@string/loss_room"/>

            <TextView
                style="@style/lay_loss_text_style"
                android:layout_marginLeft="64dp"
                android:text="@{viewModel.entity.dormitoryId+@string/dormitory}"/>

            <ImageView
                style="@style/lay_divide_line_e5e5e5_horizontal"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp">


            <TextView
                style="@style/lay_loss_text_style"
                android:text="@string/loss_items"/>

            <TextView
                style="@style/lay_loss_text_style"
                android:layout_marginLeft="64dp"
                android:text="@{viewModel.entity.articleName}"/>

            <ImageView
                style="@style/lay_divide_line_e5e5e5_horizontal"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp">


            <TextView
                style="@style/lay_loss_text_style"
                android:text="@string/loss_model"/>

            <TextView
                style="@style/lay_loss_text_style"
                android:layout_marginLeft="64dp"
                android:text="@{viewModel.entity.spec}"/>

            <ImageView
                style="@style/lay_divide_line_e5e5e5_horizontal"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp">


            <TextView
                style="@style/lay_loss_text_style"
                android:text="@string/loss_state"/>

            <TextView
                style="@style/lay_loss_text_style"
                android:layout_marginLeft="64dp"
                android:text="@{viewModel.entity.status == 0? @string/no_deal:@string/deal}"/>

            <ImageView
                style="@style/lay_divide_line_e5e5e5_horizontal"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp">


            <TextView
                style="@style/lay_loss_text_style"
                android:text="@string/loss_detail"/>

            <TextView
                style="@style/lay_loss_text_style"
                android:layout_marginLeft="64dp"
                android:text="@{viewModel.entity.reportDesc}"/>

            <ImageView
                style="@style/lay_divide_line_e5e5e5_horizontal"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp">


            <TextView
                style="@style/lay_loss_text_style"
                android:text="@string/loss_date"/>

            <TextView
                style="@style/lay_loss_text_style"
                android:layout_marginLeft="64dp"
                android:text="@{viewModel.entity.gmtModified}"/>

            <ImageView
                style="@style/lay_divide_line_e5e5e5_horizontal"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp">


            <TextView
                style="@style/lay_loss_text_style"
                android:text="@string/loss_deal_date"/>

            <TextView
                style="@style/lay_loss_text_style"
                android:layout_marginLeft="64dp"
                android:text="@{viewModel.entity.gmtCreate}"/>

            <ImageView
                style="@style/lay_divide_line_e5e5e5_horizontal"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>


    </LinearLayout>

</layout>
