<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="viewModel"
            type="com.gykj.rollcall.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_5298fc">

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="28dp">

           <ImageView
               android:layout_width="38dp"
               android:layout_height="20dp"
               android:src="@mipmap/icon_company_logo"
               android:layout_centerVertical="true"
               android:layout_marginLeft="12dp"/>


           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/company_name"
               android:textSize="10sp"
               android:textColor="@color/color_ffffff"
               android:layout_centerVertical="true"
               android:layout_marginLeft="55dp"/>

       </RelativeLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@mipmap/icon_login_title"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="23dp"
            android:text="@string/app_name"
            android:textColor="@color/color_ffffff"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_centerInParent="true"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="21dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/icon_login_frame">


                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/icon_account" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="36dp"
                    android:background="@null"
                    android:hint="@string/login_account"
                    android:text="@={viewModel.userName}"
                    android:textColor="@color/color_333333"
                    android:textSize="12sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="17dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/icon_login_frame">


                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/icon_password" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="36dp"
                    android:background="@null"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:textColor="@color/color_333333"
                    android:textSize="12sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="17dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/icon_login_frame"
                android:gravity="center"
                android:text="@string/login_login"
                android:textColor="@color/color_5298fc"
                android:textSize="16sp"
                binding:onClickCommand="@{viewModel.loginOnClickCommand}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>

    </LinearLayout>


</layout>