<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.gykj.rollcall.model.BorrowBean.RecordsBean"/>
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/color_ffffff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:src="@mipmap/icon_default_user"
                binding:placeholderRes="@mipmap/icon_default_user" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_5298fc"
                android:textSize="14sp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="14dp"
                android:text="@{viewModel.userName + @string/reduce + viewModel.dormitoryId +@string/dormitory}"/>

            <TextView
                style="@style/lay_loss_text_style"
                android:layout_marginLeft="60dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="12dp"
                android:text="@{viewModel.userNum}" />


            <TextView
                android:id="@+id/tv_status_back"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:textSize="10sp"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:textColor="@{viewModel.status == 0?@color/color_2ee0c5:@color/color_5298fc}"
                android:background="@{viewModel.status== 0? @drawable/icon_no_deal_btn_bg :@drawable/icon_deal_btn_bg}"
                android:text="@{viewModel.status == 0? @string/no_return :@string/already_return}"/>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/icon_borrow"/>


            <TextView
                style="@style/lay_loss_text_style"
                android:text="@{@string/items + viewModel.articleName+@string/article+viewModel.articleNum}"
                android:layout_marginLeft="55dp"
                android:layout_centerVertical="false"
                android:layout_marginTop="6dp"/>


            <TextView
                style="@style/lay_loss_text_style"
                android:text="@{@string/date + viewModel.gmtCreate}"
                android:layout_marginLeft="55dp"
                android:layout_centerVertical="false"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="6dp"/>

        </RelativeLayout>


        <ImageView
            style="@style/lay_divide_line_e5e5e5_horizontal"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:src="@color/color_efefef"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="46dp">

            <TextView
                android:id="@+id/tv_return"
                android:layout_alignParentRight="true"
                android:layout_marginRight="132dp"
                android:text="@string/item_return"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:textSize="10sp"
                android:gravity="center"
                android:background="@drawable/icon_borrow_item_bg"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/tv_edit"
                android:layout_alignParentRight="true"
                android:layout_marginRight="72dp"
                android:text="@string/modify"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:textSize="10sp"
                android:gravity="center"
                android:background="@drawable/icon_borrow_item_bg"
                android:layout_centerVertical="true"/>


            <TextView
                android:id="@+id/tv_delete"
                android:layout_alignParentRight="true"
                android:layout_marginRight="12dp"
                android:text="@string/delete"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:textSize="10sp"
                android:gravity="center"
                android:background="@drawable/icon_borrow_item_bg"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <ImageView
            style="@style/lay_divide_line_e5e5e5_horizontal"
            android:layout_height="6dp"
            android:src="@color/color_efefef"/>


    </LinearLayout>


</layout>


